- Possibilité, lors de la saisie de notes, d'afficher les notes précédentes et 
  les moyennes et appréciations des bulletins des années précédentes.

Absences 2: 
- Possibilité de générer un fichier ODT de rappel à la loi (depuis Bilan individuel).
  Possibilité proposée au-delà d'un seuil d'absences paramétrable dans le module Abs2.

Bulletins:
- Possibilité d'autorisation exceptionnelle de saisie/modification d'appréciation 
  Vie scolaire en période partiellement close.
- Possibilité de restreindre l'accès aux moyennes des bulletins pour les parents/élèves,
  comme on peut déjà le faire pour les appréciations et avis du conseil de classe.
- Dispositif optionnel d'appréciations-types en fonction de la moyenne.
- Bulletins HTML: Possibilité d'afficher une ligne des moyennes générales annuelles.
- Possibilité, lors de la saisie des appréciations, d'afficher les moyennes et 
  appréciations des bulletins des années précédentes.

Actions:
- Ajout d'un module Actions pour gérer des inscriptions/présence élèves,
  par exemple sur les sorties/actions UNSS.

- Général:
- Possibilité de mettre à jour globalement les groupes d'après l'export EXP_ELEVES.xml

Gepi-1.7.3 (04/04/2018)
===========================

Carnets de notes:
- Possibilité de faire apparaitre une moyenne générale sur les relevés de notes 
  (malgré toutes les réserves sur la représentativité de cette moyenne).
- Prise en compte de la date d'entrée dans l'établissement pour ne pas proposer 
  la saisie de note si le devoir est antérieur à l'entrée de l'élève.
- Possibilité de limiter la taille du logo établissement sur le relevé de notes HTML.

Bulletins:
- Possibilité de limiter la taille du logo établissement sur le bulletin HTML.

Discipline:
- Possibilité de définir des utilisateurs spécifiques individuels comme destinataires 
  des alertes sur les incidents disciplinaires 
  (par exemple les comptes Assistante sociale, Infirmière,...).

Trombinoscopes: